<resources>
    <string name="app_name">Luck Measure</string>
    <string name="app_description">Measure your percentage of luck anytime. Do not take it too seriously, just have fun ;)</string>
    <string name="go_measure">Go Measure</string>
    <string name="start">Start</string>
    <string name="zero">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="game_instruction">A random number between 1 and 10, both inclusive, has been generated. Guess the number</string>
    <string name="luck">% luck</string>
</resources>