<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MeasureLuckActivity">

    <TextView
        android:id="@+id/randomNumber_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textSize="36sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/instructions_Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0" />

    <ImageView
        android:layout_margin="20dp"
        android:id="@+id/giftImageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/instructions_Label"
        app:srcCompat="@drawable/gift" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_Label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/one_Button"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:layout_margin="10dp"
        android:text="@string/game_instruction" />


    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/one_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/one"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/four_Button"
        app:layout_constraintEnd_toStartOf="@+id/eight_Button"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/two_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/two"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/five_Button"
        app:layout_constraintEnd_toStartOf="@+id/nine_Button"
        app:layout_constraintStart_toEndOf="@+id/seven_Button" />
    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/three_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/three"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/six_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eight_Button"
        />

    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/four_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/four"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/seven_Button"
        app:layout_constraintEnd_toStartOf="@+id/eight_Button"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/five_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/five"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/eight_Button"
        app:layout_constraintEnd_toStartOf="@+id/nine_Button"
        app:layout_constraintStart_toEndOf="@+id/seven_Button" />
    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/six_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/six"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/nine_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eight_Button" />

    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/seven_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/seven"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/zero_Button"
        app:layout_constraintEnd_toStartOf="@+id/eight_Button"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/eight_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/eight"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/zero_Button"
        app:layout_constraintEnd_toStartOf="@+id/nine_Button"
        app:layout_constraintStart_toEndOf="@+id/seven_Button" />
    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/nine_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/nine"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/zero_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eight_Button" />

    <TextView
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:id="@+id/zero_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="@string/zero"
        android:textOn="@string/zero"
        android:text="@string/zero"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>